--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=expense-tracker
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret.key=QNLfgg8mMzkRdiFOxhDCKMhNM5CbZgQ2QcKkHJ4s1pc=
+jwt.expiration.access=3600000
