--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 
 jwt.secret.key=QNLfgg8mMzkRdiFOxhDCKMhNM5CbZgQ2QcKkHJ4s1pc=
-jwt.expiration.access=3600000
+jwt.expiration.access=24
+jwt.expiration.refresh=120
