--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=expense-tracker
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
+spring.datasource.url=jdbc:postgresql://localhost:5433/expense-tracker
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
