--- a/.github/workflows/build-jar.yml
+++ b/.github/workflows/build-jar.yml
@@ -1,4 +1,4 @@
-name: Build Spring Boot JAR (Corretto 21)
+name: Build Spring Boot JAR
 
 on:
   workflow_dispatch:
@@ -7,20 +7,15 @@ on:
         description: 'Build version (e.g., 1.0.0)'
         required: true
         default: '1.0.0'
-      branch:
-        description: 'Branch to build from (e.g., main, develop)'
-        required: true
-        default: 'main'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout selected branch
+      - name: Checkout current branch
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch }}
           fetch-depth: 0
 
       - name: Set up Amazon Corretto 21
@@ -33,4 +28,20 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2
-          key: ${{ runner.o
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven
+
+      - name: Build JAR with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Rename and Move JAR with Version
+        run: |
+          mkdir -p build-artifacts
+          JAR_FILE=$(ls target/*.jar | head -n 1)
+          cp "$JAR_FILE" build-artifacts/app-${{ github.event.inputs.version }}.jar
+
+      - name: Upload JAR Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: spring-boot-app-${{ github.event.inputs.version }}
+          path: build-artifacts/app-${{ github.event.inputs.version }}.jar
